--- a/links.html
+++ b/links.html
@@ -10,11 +10,11 @@
   <div id="header"></div>
   
   <h1>エンティティー</h1>
-<div class="grid">
-  <div class="card"><strong><a href="https://gainenull.org/arigathanks">ご協力</a></strong><p class="note">色々ご協力下さった方々</p></div>
-  <div class="card"><strong><a href="https://www.youtube.com/playlist?list=PLWFVInOtF-rQHP-x7U2lWCRC5KJ8fnzCu">詠花</a></strong><p class="note">詠むモノと詠うモノ</p></div>
-  <div class="card"><strong><a href="https://gainenull.org/meitanteiq">骵温</a></strong><p class="note">「ていおん」でも「たいおん」でも……</p></div>
-</div>
+<ul class="list">
+  <li><strong><a href="https://gainenull.org/arigathanks">ご協力</a></strong><p class="note">色々ご協力下さった方々</p></li>
+  <li><strong><a href="https://www.youtube.com/playlist?list=PLWFVInOtF-rQHP-x7U2lWCRC5KJ8fnzCu">詠花</a></strong><p class="note">詠むモノと詠うモノ</p></li>
+  <li><strong><a href="https://gainenull.org/meitanteiq">骵温</a></strong><p class="note">「ていおん」でも「たいおん」でも……</p></li>
+</ul>
   
   <div id="footer"></div>
   <script src="common.js"></script>
