--- a/arigathanks.html
+++ b/arigathanks.html
@@ -15,38 +15,38 @@
 </section>
 
  <section class="panel"> 
-　　<h2>隣町のmӧcӓ←</h2>
-<p>イラスト・1.0キャラクターデザイン・立ち絵<br>
-【<a href="https://x.com/tonamachimoca">リンク</a>】</p>
+   <div style="text-align: center">
+　　<h2><a href="https://x.com/tonamachimoca">隣町のmӧcӓ←</a></h2>
+<p>イラスト・1.0キャラクターデザイン・立ち絵</p>
 <p>　</p>
 　　<h2>後郷純玲</h2>
-<p>イラスト・1.0キービジュアル<br>【リンク非公開】</p>
+<p>イラスト・1.0キービジュアル</p>
 <p>　</p>
-　　<h2>Ytori</h2>
-<p>Live2Dモデリング<br>【<a href="lit.link/ytori3939">リンク</a>】</p>
+　　<h2><a href="lit.link/ytori3939">Ytori</a></h2>
+<p>Live2Dモデリング</p>
 <p>　</p>
-　　<h2>ミソラ</h2>
-<p>イラスト・3周年衣装デザイン<br>【<a href="https://x.com/erumunohana">リンク</a>】</p>
+　　<h2><a href="https://x.com/erumunohana">ミソラ</a></h2>
+<p>イラスト・3周年衣装デザイン</p>
 <p>　</p>
-　　<h2>亀井</h2>
-<p>イラスト・ご助力<br>【<a href="https://x.com/bamboo_tuttle">リンク</a>】</p>
+　　<h2><a href="https://x.com/bamboo_tuttle">亀井</a></h2>
+<p>イラスト・ご助力</p>
 <p>　</p>
 　　<h2>Ruari</h2>
-<p>サイト構築技術協力<br>【リンク非公開】</p>
+<p>サイト構築技術協力</p>
 <p>　</p>
 　　<h2>Yeon</h2>
-<p>discordサーバー技術協力<br>【リンク非公開】</p>
+<p>discordサーバー技術協力</p>
 <p>　</p>
-　　<h2>ヰ來</h2>
-<p>設定関連助力<br>【<a href="https://x.com/IKURU_V">リンク</a>】</p>
+　　<h2><a href="https://x.com/IKURU_V">ヰ來</a></h2>
+<p>設定関連助力</p>
 <p>　</p>
-　　<h2>暎 咲紅</h2>
-<p>設定関連助力<br>【<a href="https://x.com/saku_akidayo">リンク</a>】</p>
+　　<h2><a href="https://x.com/saku_akidayo">暎 咲紅</a></h2>
+<p>設定関連助力</p>
 <p>　</p>
-　　<h2>ゆこなる</h2>
-<p>飛耶音唯・露渦音芽　原音設定<br>【<a href="https://yknl-nanapro.wixsite.com/profile">リンク</a>】</p>
+　　<h2><a href="https://yknl-nanapro.wixsite.com/profile">ゆこなる</a></h2>
+<p>飛耶音唯・露渦音芽　原音設定</p>
 <p>　</p>
-
+</div>
   </section>
   
 
