--- a/arigathanks.html
+++ b/arigathanks.html
@@ -15,37 +15,63 @@
 </section>
 
  <section class="panel"> 
-   <div style="text-align: center">
-　　<h2><a href="https://x.com/tonamachimoca">隣町のmӧcӓ←</a></h2>
-<p>イラスト・1.0キャラクターデザイン・立ち絵</p>
-<p>　</p>
-　　<h2>後郷純玲</h2>
-<p>イラスト・1.0キービジュアル</p>
-<p>　</p>
-　　<h2><a href="lit.link/ytori3939">Ytori</a></h2>
-<p>Live2Dモデリング</p>
-<p>　</p>
-　　<h2><a href="https://x.com/erumunohana">ミソラ</a></h2>
-<p>イラスト・3周年衣装デザイン</p>
-<p>　</p>
-　　<h2><a href="https://x.com/bamboo_tuttle">亀井</a></h2>
-<p>イラスト・ご助力</p>
-<p>　</p>
-　　<h2>Ruari</h2>
-<p>サイト構築技術協力</p>
-<p>　</p>
-　　<h2>Yeon</h2>
-<p>discordサーバー技術協力</p>
-<p>　</p>
-　　<h2><a href="https://x.com/IKURU_V">ヰ來</a></h2>
-<p>設定関連助力</p>
-<p>　</p>
-　　<h2><a href="https://x.com/saku_akidayo">暎 咲紅</a></h2>
-<p>設定関連助力</p>
-<p>　</p>
-　　<h2><a href="https://yknl-nanapro.wixsite.com/profile">ゆこなる</a></h2>
-<p>飛耶音唯・露渦音芽　原音設定</p>
-<p>　</p>
+<div class="credits">
+
+  <div class="credit-item">
+    <p class="name"><a href="https://x.com/tonamachimoca" target="_blank">隣町のmӧcӓ←</a></p>
+    <p class="role">イラスト・1.0キャラクターデザイン・立ち絵</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name">後郷純玲</p>
+    <p class="role">イラスト・1.0キービジュアル</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name"><a href="https://lit.link/ytori3939" target="_blank">Ytori</a></p>
+    <p class="role">Live2Dモデリング</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name"><a href="https://x.com/erumunohana" target="_blank">ミソラ</a></p>
+    <p class="role">イラスト・3周年衣装デザイン</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name"><a href="https://x.com/bamboo_tuttle" target="_blank">亀井</a></p>
+    <p class="role">イラスト・ご助力</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name">Ruari</p>
+    <p class="role">サイト構築技術協力</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name">葉山恵美</p>
+    <p class="role">サイト構築技術協力</p>
+  </div>
+  
+  <div class="credit-item">
+    <p class="name">Yeon</p>
+    <p class="role">discordサーバー技術協力</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name"><a href="https://x.com/IKURU_V" target="_blank">ヰ來</a></p>
+    <p class="role">設定関連助力</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name"><a href="https://x.com/saku_akidayo" target="_blank">暎 咲紅</a></p>
+    <p class="role">設定関連助力</p>
+  </div>
+
+  <div class="credit-item">
+    <p class="name"><a href="https://yknl-nanapro.wixsite.com/profile" target="_blank">ゆこなる</a></p>
+    <p class="role">飛耶音唯・露渦音芽　原音設定</p>
+  </div>
+
 </div>
   </section>
   
